@@ -1,31 +1,40 @@
 package com.code4ro.nextdoor.security.entity;
 
-import com.code4ro.nextdoor.authentication.entity.User;
-import com.fasterxml.jackson.annotation.JsonIgnore;
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.userdetails.UserDetails;
-
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
+
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
+
+import com.code4ro.nextdoor.authentication.entity.Role;
+import com.code4ro.nextdoor.authentication.entity.User;
+import com.fasterxml.jackson.annotation.JsonIgnore;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
 
 @Getter
 @AllArgsConstructor
 public class UserPrincipal implements UserDetails {
     private UUID id;
-    private String email;
+    private String email;   
     @JsonIgnore
     private String password;
+    private Role userRole;
 
     public static UserPrincipal create(final User user) {
-        return new UserPrincipal(user.getId(), user.getEmail(), user.getPassword());
+        return new UserPrincipal(user.getId(), user.getEmail(), user.getPassword(), user.getRole());
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+    	if (this.getUserRole() == null) {
+    		return Collections.emptyList();
+    	}
+        return List.of(new SimpleGrantedAuthority(this.getUserRole().toString()));
     }
 
     @Override
